-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.0.0, Qt Creator 4.0.1, Qt Creator 4.0.2, Qt Creator 4.2.1, Qt Creator 4.8.0
-
None
-
Windows 7 x86_64
-
951aee8f3a79b0ae66255c9bd1712970ca857299 (qt-creator/qt-creator/4.8)
I work on a software project which involves Qt and Boost (version 1.57.0). This combination within Qt creator doesn't seem to play well with the Clang code model for whatever reason. If I look at the DebugView output then what I end up seeing is a lot of "fatal error: too many errors emitted" which seem to be stemming from templates in the boost headers.
Clang itself has no issue compiling this version of boost, so I'm surprised at the number of errors it's reporting. As of now the only way I can continue working is to disable the clang code model.
I've attached a trivial .cpp file which illustrates the issue for me, along with the debug output from that file.
For Gerrit Dashboard: QTCREATORBUG-16439 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
197984,2 | Clang: fix intrinsic errors with boost | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
247760,6 | Clang: Fix parsing boost headers | 4.8 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |